--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
         </div>
 
         <div class="card">
+            <a href="compose/pages/page_adaptive_layout.html">
+                <h2>Adaptive Layout</h2>
+                <p>Single app with different screen size</p>
+            </a>
+        </div>
+
+        <div class="card">
             <a href="compose/pages/page_animation.html">
                 <h2>Animations</h2>
                 <p>Default and Custom Spring Animations in jetpack Compose</p>
