--- a/compose/todo.html
+++ b/compose/todo.html
@@ -96,6 +96,11 @@
             <label for="item4" class="todo-label">Pizza Order, without NavHost,Update Multiple Screen on uiState Change</label>
         </div>
 
+        <div class="todo-item">
+            <input type="checkbox" id="item5" class="todo-checkbox">
+            <label for="item5" class="todo-label">Create Own Ui for Adaptive Layout, for Mobile, Tablet</label>
+        </div>
+
     </div>
 
 </body>
