--- a/compose/todo.html
+++ b/compose/todo.html
@@ -98,7 +98,7 @@
 
         <div class="todo-item">
             <input type="checkbox" id="item5" class="todo-checkbox">
-            <label for="item5" class="todo-label">Create Own Ui for Adaptive Layout, for Mobile, Tablet</label>
+            <label for="item5" class="todo-label">Create Own Ui for Adaptive Layout with Dynamic Navigation, for Mobile, Tablet</label>
         </div>
 
     </div>
