--- a/compose/notes.html
+++ b/compose/notes.html
@@ -21,12 +21,12 @@
         }
 
         code {
-          background-color: #f0f0f0;
+          background-color: #fff9e6;
           border: 1px solid #ccc;
           display: inline-block;
-          border: 1px solid #ccc;
+          border-radius: 6px;
           padding: 5px; /* Adjust padding as needed */
-          font-family: 'Courier New', monospace; /* Use a monospaced font for code */
+          font-family: monospace; /* Use a monospaced font for code */
         }
     </style>
 </head>
@@ -138,6 +138,16 @@
         Make sure you have this dependency { <code>implementation("androidx.compose.material3:material3-window-size-class:1.1.2")</code> }
     </p>
 
+    <p>To call <code>suspend</code> function safely from compose you need to use <code>LaunchedEffect { ... }</code> composable</p>
+    <p>
+        <code>
+            LaunchedEffect(vararg keys: Any?) {...} <br>
+            LaunchedEffect(key1:Any?) {...} <br>
+            LaunchedEffect(key1:Any?, key2: Any?) {...} <br>
+            LaunchedEffect(key1:Any?, key2: Any?, key3: Any?) {...} <br>
+            LaunchedEffect(key1:Any?, key2: Any?, key3: Any?) {...} <br>
+        </code>
 
+    </p>
 </body>
 </html>
