api webservice notes

--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
             </a>
         </div>
 
+
+        <div class="card">
+            <a href="compose/pages/page_api_web_services.html">
+                <h2>API &amp; Web Services</h2>
+                <p>Retrofit, APIs GET,POST,PUT, Fetch Online Data</p>
+            </a>
+        </div>
+
         <div class="card">
             <a href="compose/pages/page_animation.html">
                 <h2>Animations</h2>
