--- a/compose/pages/page_theme.html
+++ b/compose/pages/page_theme.html
@@ -10,7 +10,7 @@
 
 <body>
 <header>
-  <h1 class="header-heading">Jetpack Compose / Layout</h1>
+  <h1 class="header-heading">Jetpack Compose / Theme</h1>
   <div>
     <a class="menu" href="../todo.html" id="todoLink">To-Do</a>
     <a class="menu" href="../notes.html" id="notesLink">Notes</a>
