--- a/compose/todo.html
+++ b/compose/todo.html
@@ -101,6 +101,24 @@
             <label for="item5" class="todo-label">Create Own Ui for Adaptive Layout with Dynamic Navigation, for Mobile, Tablet</label>
         </div>
 
+        <div class="todo-item">
+            <input type="checkbox" id="item6" class="todo-checkbox">
+            <label for="item6" class="todo-label">Create Small app for BookShelf, By making Network request <a href="https://www.googleapis.com/books/v1/volumes?q=jazz+history">Here</a>
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item7" class="todo-checkbox">
+            <label for="item7" class="todo-label">Create Small app for Admin for Collage Student in RoomDatabase (CRUD)
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item8" class="todo-checkbox">
+            <label for="item8" class="todo-label">Create Small app for Saving Data in DataStore (SharePref)
+            </label>
+        </div>
+
     </div>
 
 </body>
