--- a/index.html
+++ b/index.html
@@ -20,24 +20,12 @@
     </header>
 
     <div class="container">
-        <div class="card">
-            <a href="compose/pages/page_texts.html">
-                <h2>Text</h2>
-                <p>TextView in Jetpack Compose</p>
-            </a>
-        </div>
+
 
         <div class="card">
-            <a href="compose/pages/page_buttons.html">
-                <h2>Buttons</h2>
-                <p>Different Types of Buttons in Jetpack Compose</p>
-            </a>
-        </div>
-
-        <div class="card">
-            <a href="compose/pages/page_edit_text.html">
-                <h2>EditText</h2>
-                <p>FillTextField, OutlineTextField, different input types</p>
+            <a href="compose/pages/page_widgets.html">
+                <h2>UI Widget</h2>
+                <p>UI Widgets in Jetpack Compose</p>
             </a>
         </div>
 
@@ -49,9 +37,9 @@
         </div>
 
         <div class="card">
-            <a href="compose/pages/page_switch.html">
-                <h2>Switch</h2>
-                <p>Toggle Button, Switch Button in compose</p>
+            <a href="compose/pages/page_resources.html">
+                <h2>Resources</h2>
+                <p>Animation, Theme, Color, Shape, Other Related</p>
             </a>
         </div>
 
@@ -63,31 +51,9 @@
         </div>
 
         <div class="card">
-            <a href="compose/pages/page_adaptive_layout.html">
-                <h2>Adaptive Layout</h2>
-                <p>Single app with different screen size</p>
-            </a>
-        </div>
-
-
-        <div class="card">
             <a href="compose/pages/page_api_web_services.html">
-                <h2>API &amp; Web Services</h2>
-                <p>Retrofit, APIs GET,POST,PUT, Fetch Online Data</p>
-            </a>
-        </div>
-
-        <div class="card">
-            <a href="compose/pages/page_animation.html">
-                <h2>Animations</h2>
-                <p>Default and Custom Spring Animations in jetpack Compose</p>
-            </a>
-        </div>
-
-        <div class="card">
-            <a href="compose/pages/page_theme.html">
-                <h2>Theme</h2>
-                <p>Theme, Color, Shape, Type in Compose</p>
+                <h2>API &amp; Room DB</h2>
+                <p>Get Data from Web-Services and Room Database</p>
             </a>
         </div>
 
@@ -104,6 +70,8 @@
                 <p>Practice code from Code-Lab or self idea</p>
             </a>
         </div>
+
+
 
         <!-- Add more cards as needed -->
     </div>
