--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         </div>
 
         <div class="card">
+            <a href="compose/pages/page_background.html">
+                <h2>Background</h2>
+                <p>Service, Broadcast Receiver, WorkManager etc</p>
+            </a>
+        </div>
+
+        <div class="card">
             <a href="compose/pages/page_resources.html">
                 <h2>Resources</h2>
                 <p>Animation, Theme, Color, Shape, Other Related</p>
