--- a/compose/todo.html
+++ b/compose/todo.html
@@ -93,7 +93,7 @@
 
         <div class="todo-item">
             <input type="checkbox" id="item4" class="todo-checkbox">
-            <label for="item4" class="todo-label">Pizza Order, without NavHost,Update Multiple Screen on uiState Change</label>
+            <label for="item4" class="todo-label">Pizza Order,With NavHost,Update Multiple Screen on uiState Change</label>
         </div>
 
         <div class="todo-item">
